kubernetes/app-template-no-mesh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/version: "1.0"
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello
      app.kubernetes.io/version: "1.0"
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/name: hello
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
        - image: <your-app-image>
          imagePullPolicy: Always
          name: hello
          ports:
            - containerPort: 9000
              name: grpc
              protocol: TCP
          volumeMounts:
            - name: tls
              mountPath: /work/tls
      volumes:
        - name: tls
          secret:
            secretName: tls-secret
            defaultMode: 420
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/version: "1.0"
  name: hello
spec:
  ports:
    - name: grpc
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: hello
    app.kubernetes.io/version: "1.0"
  type: ClusterIP
