kubernetes/Ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: public-ingress
  namespace: istio-system
  annotations:
    route.openshift.io/termination: passthrough  # Must passthough to `Gateway`
spec:
  tls:
    - hosts:
        - "hello.grpc-testing.apps.cluster-2xm85.2xm85.sandbox705.opentlc.com"
      secretName: tls-secret
  rules:
    - host: "hello.grpc-testing.apps.cluster-2xm85.2xm85.sandbox705.opentlc.com"
      http:
        paths:
          - path: ''
            pathType: ImplementationSpecific  # Required for passthrough
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 9443 # must match ingress gateway service `port`
